--- a/notebooks/EDA.ipynb
+++ b/notebooks/EDA.ipynb
@@ -2,22 +2,273 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Importar bibliotecas\n",
     "\n",
-    "import pandas\n",
+    "import pandas as pd \n",
     "import plotly_express"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Se carga el dataset de interés\n",
+    "data = pd.read_csv('vehicles_us.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 51525 entries, 0 to 51524\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   price         51525 non-null  int64  \n",
+      " 1   model_year    47906 non-null  float64\n",
+      " 2   model         51525 non-null  object \n",
+      " 3   condition     51525 non-null  object \n",
+      " 4   cylinders     46265 non-null  float64\n",
+      " 5   fuel          51525 non-null  object \n",
+      " 6   odometer      43633 non-null  float64\n",
+      " 7   transmission  51525 non-null  object \n",
+      " 8   type          51525 non-null  object \n",
+      " 9   paint_color   42258 non-null  object \n",
+      " 10  is_4wd        25572 non-null  float64\n",
+      " 11  date_posted   51525 non-null  object \n",
+      " 12  days_listed   51525 non-null  int64  \n",
+      "dtypes: float64(4), int64(2), object(7)\n",
+      "memory usage: 5.1+ MB\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>price</th>\n",
+       "      <th>model_year</th>\n",
+       "      <th>model</th>\n",
+       "      <th>condition</th>\n",
+       "      <th>cylinders</th>\n",
+       "      <th>fuel</th>\n",
+       "      <th>odometer</th>\n",
+       "      <th>transmission</th>\n",
+       "      <th>type</th>\n",
+       "      <th>paint_color</th>\n",
+       "      <th>is_4wd</th>\n",
+       "      <th>date_posted</th>\n",
+       "      <th>days_listed</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>38498</th>\n",
+       "      <td>7900</td>\n",
+       "      <td>2006.0</td>\n",
+       "      <td>dodge dakota</td>\n",
+       "      <td>good</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>141200.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>truck</td>\n",
+       "      <td>silver</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-01-18</td>\n",
+       "      <td>26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33676</th>\n",
+       "      <td>1950</td>\n",
+       "      <td>1997.0</td>\n",
+       "      <td>ford expedition</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>258876.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>SUV</td>\n",
+       "      <td>white</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2018-09-30</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29873</th>\n",
+       "      <td>5000</td>\n",
+       "      <td>2000.0</td>\n",
+       "      <td>toyota tundra</td>\n",
+       "      <td>good</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>266000.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>pickup</td>\n",
+       "      <td>grey</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2019-03-04</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>29305</th>\n",
+       "      <td>48000</td>\n",
+       "      <td>2016.0</td>\n",
+       "      <td>cadillac escalade</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>gas</td>\n",
+       "      <td>43870.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>SUV</td>\n",
+       "      <td>black</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2018-08-02</td>\n",
+       "      <td>47</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36675</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2010.0</td>\n",
+       "      <td>ford f350 super duty</td>\n",
+       "      <td>excellent</td>\n",
+       "      <td>8.0</td>\n",
+       "      <td>diesel</td>\n",
+       "      <td>139486.0</td>\n",
+       "      <td>automatic</td>\n",
+       "      <td>truck</td>\n",
+       "      <td>black</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2018-11-18</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       price  model_year                 model  condition  cylinders    fuel  \\\n",
+       "38498   7900      2006.0          dodge dakota       good        8.0     gas   \n",
+       "33676   1950      1997.0       ford expedition  excellent        8.0     gas   \n",
+       "29873   5000      2000.0         toyota tundra       good        8.0     gas   \n",
+       "29305  48000      2016.0     cadillac escalade  excellent        8.0     gas   \n",
+       "36675      1      2010.0  ford f350 super duty  excellent        8.0  diesel   \n",
+       "\n",
+       "       odometer transmission    type paint_color  is_4wd date_posted  \\\n",
+       "38498  141200.0    automatic   truck      silver     1.0  2019-01-18   \n",
+       "33676  258876.0    automatic     SUV       white     1.0  2018-09-30   \n",
+       "29873  266000.0    automatic  pickup        grey     1.0  2019-03-04   \n",
+       "29305   43870.0    automatic     SUV       black     1.0  2018-08-02   \n",
+       "36675  139486.0    automatic   truck       black     1.0  2018-11-18   \n",
+       "\n",
+       "       days_listed  \n",
+       "38498           26  \n",
+       "33676           18  \n",
+       "29873            8  \n",
+       "29305           47  \n",
+       "36675            9  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.info()\n",
+    "data.sample(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "El dataset presenta información sobre vehículos de segunda mano dando información sobre el modelo del mismo, sus características físicas, la fecha en la que se publicó y el costo.\n",
+    "Se tienen 51,525 entradas y 12 columnas de las cuales hay valores ausentes en 5 columnas y en cada una el valor ausente se sustituirá con:\n",
+    "- Model_year: Se usará el 0 para sustituir los valores ausentes.\n",
+    "- cylinders: Se usará un 0 para sustituir los valores ausentes.\n",
+    "- odometer: Se usará el 0 para sustituir los valores ausentes.\n",
+    "- paint_color: Se usará 'Unknown' para sustituir los valores ausentes.\n",
+    "- is_4wd: Se tienen valores de 1 y NaN, por lo que se sustituirá NaN por 0.\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['model_year'] = data['model_year'].fillna(0)\n",
+    "data['cylinders'] = data['cylinders'].fillna(0)\n",
+    "data['odometer'] = data['odometer'].fillna(0)\n",
+    "data['paint_color'] = data['paint_color'].fillna('Unknown')\n",
+    "data['is_4wd'] = data['is_4wd'].fillna(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 51525 entries, 0 to 51524\n",
+      "Data columns (total 13 columns):\n",
+      " #   Column        Non-Null Count  Dtype  \n",
+      "---  ------        --------------  -----  \n",
+      " 0   price         51525 non-null  int64  \n",
+      " 1   model_year    51525 non-null  float64\n",
+      " 2   model         51525 non-null  object \n",
+      " 3   condition     51525 non-null  object \n",
+      " 4   cylinders     51525 non-null  float64\n",
+      " 5   fuel          51525 non-null  object \n",
+      " 6   odometer      51525 non-null  float64\n",
+      " 7   transmission  51525 non-null  object \n",
+      " 8   type          51525 non-null  object \n",
+      " 9   paint_color   51525 non-null  object \n",
+      " 10  is_4wd        51525 non-null  float64\n",
+      " 11  date_posted   51525 non-null  object \n",
+      " 12  days_listed   51525 non-null  int64  \n",
+      "dtypes: float64(4), int64(2), object(7)\n",
+      "memory usage: 5.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
   }
  ],
  "metadata": {
@@ -27,7 +278,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.0"
   }
  },
